# fastflow_api

./: .gitignore  README.md  pyproject.toml
fastflow_api/: database.py  main.py
fastflow_api/core/: .env.example  config.py
fastflow_api/core/cache/: sqlite_handler.py
fastflow_api/core/modules/api_docs/: __init__.py
fastflow_api/core/modules/api_docs/router/: api_docs_router.py  versi_router.py
fastflow_api/core/modules/auth/: __init__.py
fastflow_api/core/modules/auth/router/: login_router.py
fastflow_api/core/modules/auth/schema/: login.py
fastflow_api/core/modules/customer/crud/: customer_crud.py
fastflow_api/core/modules/master/: __init__.py
fastflow_api/core/modules/text_to_voice/: __init__.py
fastflow_api/core/modules/users/: __init__.py
fastflow_api/core/modules/wablas/: __init__.py
fastflow_api/core/router/: api_log_middleware.py  api_metadata.py  api_middleware.py  api_router.py
fastflow_api/core/shared/: base.py  base_validation_model_schema.py  check_data_model.py
fastflow_api/core/shared/json_helpers/: json_customer.py  json_detail_jual_produk.py  json_global.py  json_info.py  json_master_jual_produk.py  json_produk.py  json_produk_barcode.py  json_produk_group.py  json_satuan.py  json_satuan_konversi.py  json_user.py
fastflow_api/core/templates/: invoice.html
fastflow_api/core/utils/: common.py  generate_no_faktur.py  hashing.py  log.py  oauth2.py  parsing.py  response_handle.py  send_whatsapp.py  token.py  upload_file.py  upload_foto.py
fastflow_api/core/utils/wablas/: wablas_storage.py
fastflow_updatedb/: init_db.sql
(+49 files in other folders)
